--- a/Ziazios Konstantinos-AzureMobileServices/Project/Source/Android/skgazure2015/app/src/main/res/layout/row_list_to_do.xml
+++ b/Ziazios Konstantinos-AzureMobileServices/Project/Source/Android/skgazure2015/app/src/main/res/layout/row_list_to_do.xml
@@ -9,5 +9,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/checkbox_text" />
+ <TextView
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     android:text="date"
+     android:id="@+id/whenDate"
+     android:gravity="right"/>
 
 </LinearLayout>
