--- a/Nikos Tzelvenzis - Azure IaaS/Project/Source/MySQLTestApp/Views/Customers/Details.cshtml
+++ b/Nikos Tzelvenzis - Azure IaaS/Project/Source/MySQLTestApp/Views/Customers/Details.cshtml
@@ -19,11 +19,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.nit)
+            @Html.DisplayNameFor(model => model.TotalRevenue)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.nit)
+            @Html.DisplayFor(model => model.TotalRevenue)
         </dd>
 
         <dt>
