--- a/Nikos Tzelvenzis - Azure IaaS/Project/Source/MySQLTestApp/Views/Customers/Index.cshtml
+++ b/Nikos Tzelvenzis - Azure IaaS/Project/Source/MySQLTestApp/Views/Customers/Index.cshtml
@@ -11,6 +11,9 @@
         <th>
             Customer Name
         </th>
+        <th>
+            Revenue
+        </th>
         <th></th>
     </tr>
 
@@ -18,6 +21,9 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.customer)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.TotalRevenue)
         </td>
         <td>
             @Html.ActionLink("Details", "Details", new { id=item.id })
