--- a/Ziazios Konstantinos-AzureMobileServices/Project/Source/Android/skgazure2015/app/src/main/res/layout/comment_list.xml
+++ b/Ziazios Konstantinos-AzureMobileServices/Project/Source/Android/skgazure2015/app/src/main/res/layout/comment_list.xml
@@ -1,33 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
-    
-    <CheckBox
-        android:id="@+id/checkToDoItem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/checkbox_text" />
+    android:orientation="vertical">
 
-
-</LinearLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="description"
-        android:id="@+id/description"
-        android:gravity="left"/>
+        android:text="date"
+        android:id="@+id/comment"
+        android:gravity="right"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="author"
+        android:text="date"
         android:id="@+id/author"
-        android:gravity="left"/>
+        android:gravity="right"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,4 +24,5 @@
         android:text=""
         android:id="@+id/whenDate"
         android:gravity="right"/>
+
 </LinearLayout>
